@@ -442,20 +442,12 @@ block|{
 name|IndexOutput
 name|os
 init|=
-name|to
-operator|.
-name|createOutput
-argument_list|(
-name|dest
-argument_list|)
+literal|null
 decl_stmt|;
 name|IndexInput
 name|is
 init|=
-name|openInput
-argument_list|(
-name|src
-argument_list|)
+literal|null
 decl_stmt|;
 name|IOException
 name|priorException
@@ -464,6 +456,22 @@ literal|null
 decl_stmt|;
 try|try
 block|{
+name|os
+operator|=
+name|to
+operator|.
+name|createOutput
+argument_list|(
+name|dest
+argument_list|)
+expr_stmt|;
+name|is
+operator|=
+name|openInput
+argument_list|(
+name|src
+argument_list|)
+expr_stmt|;
 name|is
 operator|.
 name|copyBytes
